--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <!--stylesheets-->
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/frontend/public/assets/css/main.css">
+        <link rel="stylesheet" href="/public/assets/css/main.css">
         <!--scripts-->
         <script src="https://kit.fontawesome.com/faf5d1e340.js" crossorigin="anonymous"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
