--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Chris King | Full Stack Web Developer</title>
-        <meta name="description" content="Full Stack Web Developer, currently based in Las Vegas, Nevada">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="/favicon.ico">
-        <!--stylesheets-->
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/public/assets/css/main.css">
-        <!--scripts-->
-        <script src="https://kit.fontawesome.com/faf5d1e340.js" crossorigin="anonymous"></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166248605-1"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-166248605-1');
-        </script>
+        {{range .Meta}}
+            <title>{{.Title}}</title>
+            <meta name="description" content="{{.Content}}">
+        {{end}}
+        {{template "head"}}
     </head>
     <body>
-
-        <header></header>
+        
+        {{range .User}}
+            {{if ne .Role ""}}
+                <header class="logout">
+                    <a href="/logout">Logout</a>
+                </header>
+            {{end}}
+        {{end}}
 
         <section class="header">
             <h1 class="main-header">full stack web developer</h1>
