--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,12 +30,14 @@
                     <label>Last name</label>
                     <input name="lname" placeholder="last name" value="" type="text">
                 </div>
-                <div class="form-group">
+                <div class="form-group select-group">
                     <label>Role</label>
-                    <select name="role">
-                        <option value="admin">Admin</option>
-                        <option value="user">User</option>
-                    </select>
+                    <div class="selectdiv">
+                        <select name="role" required>
+                            <option value="admin">Admin</option>
+                            <option value="user">User</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="form-group button-group button-right">
                     <button type="submit">Sign up</button>
