added portfolio project

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,13 @@
                 <a class="email-contact" href="mailto:chriskingwi@gmail.com">chriskingwi@gmail.com</a>
             </h2>
         </section>
+
+        <section class="main-content">
+            <ul class="list-group">
+                <li class="list-item list-item-title"><a href="https://freetrack.herokuapp.com/" target="_blank">freeTrack</a></li>
+                <li class="list-item">a CRM project built on MongoDB, Express, React, Node, and OAuth2.0</li>
+            </ul>
+        </section>
         
         <footer>
             <div class="copyright">
@@ -38,6 +45,7 @@
                 <i class="fab fa-html5"></i>
                 <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-js"></i>
+                <i class="fab fa-react"></i>
                 <i class="fab fa-node-js"></i>
                 <span>golang</span>
             </div>
